--- a/package.json
+++ b/package.json
@@ -3,25 +3,69 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "vite-dev": "vite",
+    "vite-build": "tsc && vite build",
+    "dev": "tauri dev",
+    "build": "tauri build",
+    "build-debug": "tauri build --debug",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext ts --ext tsx",
+    "type-check": "tsc --pretty --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "@headlessui/react": "1.7.17",
+    "@tauri-apps/api": "1.5.0",
+    "augmented-ui": "1.1.2",
+    "color": "4.2.3",
+    "lodash": "4.17.21",
+    "pretty-bytes": "6.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-window": "1.8.9",
+    "smoothie": "1.36.1",
+    "swr": "2.2.4",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
+    "xterm": "5.3.0",
+    "xterm-addon-fit": "0.8.0",
+    "xterm-addon-unicode11": "0.6.0",
+    "xterm-addon-web-links": "0.9.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "@tauri-apps/cli": "1.5.1",
+    "@trivago/prettier-plugin-sort-imports": "4.2.0",
+    "@types/color": "3.0.4",
+    "@types/lodash": "4.14.199",
+    "@types/node": "18.17.19",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "@types/react-window": "^1.8.6",
+    "@typescript-eslint/eslint-plugin": "6.7.5",
+    "@typescript-eslint/parser": "6.7.5",
+    "@vitejs/plugin-react-swc": "^3.4.0",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.50.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-tailwindcss": "3.13.0",
+    "husky": "8.0.3",
+    "lint-staged": "15.0.1",
+    "postcss": "8.4.31",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.5",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6",
+    "vite": "4.4.11",
+    "vite-tsconfig-paths": "4.2.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js}": [
+      "npm run lint",
+      "npm run format"
+    ],
+    "*.{js,css,md}": "prettier --write"
   }
 }
