--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "@types/node": "18.17.19",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@types/react-window": "^1.8.6",
+    "@types/react-window": "1.8.6",
     "@typescript-eslint/eslint-plugin": "6.7.5",
     "@typescript-eslint/parser": "6.7.5",
-    "@vitejs/plugin-react-swc": "^3.4.0",
+    "@vitejs/plugin-react-swc": "3.4.0",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-prettier": "9.0.0",
