--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "vite-dev": "vite",
     "vite-build": "tsc && vite build",
+    "tauri": "tauri",
     "dev": "tauri dev",
     "build": "tauri build",
     "build-debug": "tauri build --debug",
