--- a/package.json
+++ b/package.json
@@ -12,20 +12,18 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx",
     "type-check": "tsc --pretty --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.19",
+    "@solid-primitives/date": "2.0.21",
     "@tauri-apps/api": "1.5.6",
     "augmented-ui": "1.1.2",
+    "clsx": "2.1.1",
     "color": "4.2.3",
     "lodash": "4.17.21",
     "pretty-bytes": "6.1.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-window": "1.8.10",
     "smoothie": "1.36.1",
-    "swr": "2.2.5",
+    "solid-js": "1.8.17",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "xterm": "5.3.0",
     "xterm-addon-fit": "0.8.0",
@@ -38,21 +36,16 @@
     "@types/color": "3.0.6",
     "@types/lodash": "4.17.4",
     "@types/node": "20.12.12",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@types/react-window": "1.8.8",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
-    "@vitejs/plugin-react-swc": "3.7.0",
+    "@typescript-eslint/eslint-plugin": "7.10.0",
+    "@typescript-eslint/parser": "7.10.0",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-standard": "17.1.0",
+    "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-tailwindcss": "3.17.0",
-    "husky": "8.0.3",
+    "husky": "9.0.11",
     "lint-staged": "15.2.5",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
@@ -60,10 +53,12 @@
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5",
     "vite": "5.2.11",
+    "vite-plugin-solid": "2.10.2",
     "vite-tsconfig-paths": "4.3.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js}": [
+      "eslint --cache --fix",
       "npm run lint",
       "npm run format"
     ],
