Support multiple terminals running in parallel.

--- a/renovate.json
+++ b/renovate.json
@@ -45,7 +45,7 @@
     },
     {
       "groupName": "terminal",
-      "matchPackagePrefixes": ["xterm"]
+      "matchPackagePrefixes": ["@xterm"]
     }
   ],
   "postUpdateOptions": ["npmDedupe"]
