--- a/package.json
+++ b/package.json
@@ -17,42 +17,45 @@
   "dependencies": {
     "@solid-primitives/date": "2.0.21",
     "@tauri-apps/api": "1.5.6",
-    "augmented-ui": "1.1.2",
+    "@xterm/addon-canvas": "0.7.0",
+    "@xterm/addon-clipboard": "0.1.0",
+    "@xterm/addon-fit": "0.10.0",
+    "@xterm/addon-unicode11": "0.8.0",
+    "@xterm/addon-web-links": "0.11.0",
+    "@xterm/addon-webgl": "0.18.0",
+    "@xterm/xterm": "5.5.0",
+    "augmented-ui": "2.0.0",
     "clsx": "2.1.1",
     "color": "4.2.3",
     "lodash": "4.17.21",
     "pretty-bytes": "6.1.1",
     "smoothie": "1.36.1",
     "solid-js": "1.8.17",
-    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
-    "xterm": "5.3.0",
-    "xterm-addon-fit": "0.8.0",
-    "xterm-addon-unicode11": "0.6.0",
-    "xterm-addon-web-links": "0.9.0"
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "1.5.14",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/color": "3.0.6",
-    "@types/lodash": "4.17.4",
+    "@types/lodash": "4.17.5",
     "@types/node": "20.14.2",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
+    "@typescript-eslint/eslint-plugin": "7.12.0",
+    "@typescript-eslint/parser": "7.12.0",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.2.0",
-    "eslint-plugin-tailwindcss": "3.17.0",
+    "eslint-plugin-tailwindcss": "3.17.3",
     "husky": "9.0.11",
     "lint-staged": "15.2.5",
     "postcss": "8.4.38",
     "prettier": "3.3.1",
-    "prettier-plugin-tailwindcss": "0.6.1",
-    "tailwindcss": "3.4.3",
+    "prettier-plugin-tailwindcss": "0.6.2",
+    "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
-    "vite": "5.2.12",
+    "vite": "5.2.13",
     "vite-plugin-solid": "2.10.2",
     "vite-tsconfig-paths": "4.3.2"
   },
