--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0.203", features = ["derive"] }
 tauri = { version = "1.6.8", features = [ "shell-open", "os-all"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 reqwest = { version = "0.12.4", features = ["json"] }
 tokio = { version = "1.38.0", features = ["time"] }
 log = "0.4.21"
