--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pretty-bytes": "6.1.1",
     "smoothie": "1.36.1",
     "solid-js": "1.8.17",
+    "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
   },
   "devDependencies": {
