change file scanner use notify

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.38.0", features = ["time"] }
 log = "0.4.21"
 sysinfo = "0.29.11"
 portable-pty = "0.8.1"
+notify = { version = "6.1.1" }
 
 [features]
 # by default Tauri runs in production mode
