--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@solid-primitives/date": "2.0.21",
+    "@solid-primitives/keyboard": "1.2.8",
     "@tauri-apps/api": "1.5.6",
     "@xterm/addon-canvas": "0.7.0",
     "@xterm/addon-clipboard": "0.1.0",
@@ -50,10 +51,10 @@
     "eslint-plugin-promise": "6.2.0",
     "eslint-plugin-tailwindcss": "3.17.3",
     "husky": "9.0.11",
-    "lint-staged": "15.2.5",
+    "lint-staged": "15.2.7",
     "postcss": "8.4.38",
-    "prettier": "3.3.1",
-    "prettier-plugin-tailwindcss": "0.6.3",
+    "prettier": "3.3.2",
+    "prettier-plugin-tailwindcss": "0.6.4",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
     "vite": "5.2.13",
