--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "vite-dev": "vite",
     "vite-build": "tsc && vite build",
     "tauri": "tauri",
-    "dev": "tauri dev",
+    "dev": "WEBKIT_DISABLE_DMABUF_RENDERER=1 tauri dev",
     "build": "tauri build",
     "build-debug": "tauri build --debug",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx",
+    "lint": "eslint .",
     "type-check": "tsc --pretty --noEmit",
     "prepare": "husky"
   },
@@ -19,8 +19,8 @@
     "@solid-primitives/keyboard": "1.2.8",
     "@tauri-apps/api": "2.0.3",
     "@tauri-apps/plugin-http": "2.0.1",
-    "@tauri-apps/plugin-os": "2.0.0",
     "@tauri-apps/plugin-log": "2.0.0",
+    "@tauri-apps/plugin-os": "2.0.0",
     "@tauri-apps/plugin-shell": "2.0.1",
     "@tauri-apps/plugin-store": "2.1.0",
     "@xterm/addon-canvas": "0.7.0",
@@ -39,20 +39,20 @@
     "solid-js": "1.9.3"
   },
   "devDependencies": {
+    "@eslint/js": "9.13.0",
     "@tauri-apps/cli": "2.0.4",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@types/color": "3.0.6",
+    "@types/color": "4.2.0",
     "@types/lodash": "4.17.12",
     "@types/node": "22.8.1",
-    "@typescript-eslint/eslint-plugin": "8.10.0",
-    "@typescript-eslint/parser": "8.10.0",
+    "@typescript-eslint/parser": "8.11.0",
     "autoprefixer": "10.4.20",
-    "eslint": "8.57.1",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-promise": "6.6.0",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-solid": "0.14.3",
     "eslint-plugin-tailwindcss": "3.17.5",
+    "globals": "15.11.0",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
     "postcss": "8.4.47",
@@ -60,7 +60,9 @@
     "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "3.4.14",
     "typescript": "5.6.3",
+    "typescript-eslint": "8.11.0",
     "vite": "5.4.10",
+    "vite-plugin-eslint": "1.8.1",
     "vite-plugin-solid": "2.10.2",
     "vite-tsconfig-paths": "5.0.1"
   },
