--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "lodash": "4.17.21",
     "pretty-bytes": "6.1.1",
     "smoothie": "1.36.1",
-    "solid-js": "1.9.3"
+    "solid-js": "1.9.3",
+    "tailwind-merge": "2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
