--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/node": "22.8.1",
     "@typescript-eslint/parser": "8.11.0",
     "autoprefixer": "10.4.20",
-    "eslint": "^9.13.0",
+    "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-promise": "7.1.0",
     "eslint-plugin-solid": "0.14.3",
