--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@solid-primitives/date": "2.1.2",
     "@solid-primitives/keyboard": "1.3.1",
+    "@tailwindcss/vite": "4.1.10",
     "@tauri-apps/api": "2.5.0",
     "@tauri-apps/plugin-http": "2.4.4",
-    "@tauri-apps/plugin-log": "2.4.0",
-    "@tauri-apps/plugin-os": "2.2.1",
-    "@tauri-apps/plugin-shell": "2.2.1",
-    "@tauri-apps/plugin-store": "2.2.0",
+    "@tauri-apps/plugin-log": "2.5.0",
+    "@tauri-apps/plugin-os": "2.2.2",
+    "@tauri-apps/plugin-shell": "2.2.2",
+    "@tauri-apps/plugin-store": "2.2.1",
     "@xterm/addon-canvas": "0.7.0",
     "@xterm/addon-clipboard": "0.1.0",
     "@xterm/addon-fit": "0.10.0",
@@ -34,33 +35,33 @@
     "clsx": "2.1.1",
     "color": "5.0.0",
     "lodash": "4.17.21",
-    "pretty-bytes": "6.1.1",
+    "pretty-bytes": "7.0.0",
     "smoothie": "1.36.1",
     "solid-js": "1.9.7",
-    "tailwind-merge": "2.6.0"
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "9.29.0",
+    "@tailwindcss/postcss": "4.1.10",
     "@tauri-apps/cli": "2.5.0",
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@types/color": "4.2.0",
-    "@types/lodash": "4.17.17",
-    "@types/node": "22.15.31",
-    "autoprefixer": "10.4.21",
+    "@types/lodash": "4.17.18",
+    "@types/node": "24.0.3",
+    "@typescript-eslint/parser": "8.34.1",
     "eslint": "9.29.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-solid": "0.14.5",
-    "eslint-plugin-tailwindcss": "3.18.0",
     "globals": "16.2.0",
     "husky": "9.1.7",
-    "lint-staged": "15.5.2",
-    "postcss": "8.5.5",
+    "lint-staged": "16.1.2",
+    "postcss": "8.5.6",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.12",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.1.10",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.34.0",
+    "typescript-eslint": "8.34.1",
     "vite": "6.3.5",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-solid": "2.11.6",
