--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,15 +15,15 @@ tauri-build = { version = "2.2.0", features = [] }
 serde_json = "1.0.140"
 serde = { version = "1.0.219", features = ["derive"] }
 tauri = { version = "2.5.1", features = [] }
-tauri-plugin-store = "2.2.0"
-tauri-plugin-log = { version = "2.4.0" }
+tauri-plugin-store = "2.2.1"
+tauri-plugin-log = { version = "2.5.0" }
 tauri-plugin-single-instance = { version = "2.2.4" }
-tokio = { version = "1.45.1", features = ["time"] }
+tokio = { version = "1.45.1", features = ["time", "process"] }
 log = "0.4.27"
 sysinfo = "0.35.2"
 portable-pty = "0.9.0"
 notify = { version = "8.0.0" }
 chrono = "0.4.41"
-tauri-plugin-os = "2.2.1"
-tauri-plugin-shell = "2.2.1"
+tauri-plugin-os = "2.2.2"
+tauri-plugin-shell = "2.2.2"
 tauri-plugin-http = "2.4.4"
