--- a/renovate.json
+++ b/renovate.json
@@ -63,5 +63,5 @@
       "matchPackagePrefixes": ["@xterm"]
     }
   ],
-  "postUpdateOptions": ["npmDedupe"]
+  "postUpdateOptions": ["pnpmDedupe"]
 }
