--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,7 +14,7 @@ tauri-build = { version = "2.5.3", features = [] }
 [dependencies]
 serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
-tauri = { version = "2.9.4", features = [] }
+tauri = { version = "2.9.5", features = [] }
 tauri-plugin-store = "2.4.1"
 tauri-plugin-log = { version = "2.7.1" }
 tauri-plugin-single-instance = { version = "2.3.6" }
@@ -28,3 +28,4 @@ portable-pty = "0.9.0"
 notify = { version = "8.2.0" }
 chrono = "0.4.42"
 dashmap = "7.0.0-rc2"
+nvml-wrapper = "0.11.0"
