--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solid-primitives/date": "2.1.4",
     "@solid-primitives/keyboard": "1.3.3",
     "@tailwindcss/vite": "4.1.18",
+    "@tanstack/solid-query": "5.90.22",
     "@tauri-apps/api": "2.9.1",
     "@tauri-apps/plugin-http": "2.5.6",
     "@tauri-apps/plugin-log": "2.8.0",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "9.39.2",
     "@tailwindcss/postcss": "4.1.18",
+    "@tanstack/solid-query-devtools": "5.91.2",
     "@tauri-apps/cli": "2.9.6",
     "@trivago/prettier-plugin-sort-imports": "6.0.2",
     "@types/color": "4.2.0",
