--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "@tailwindcss/vite": "4.1.18",
     "@tanstack/solid-query": "5.90.22",
     "@tauri-apps/api": "2.9.1",
-    "@tauri-apps/plugin-http": "2.5.6",
     "@tauri-apps/plugin-log": "2.8.0",
+    "@tauri-apps/plugin-opener": "2.5.3",
     "@tauri-apps/plugin-os": "2.3.2",
-    "@tauri-apps/plugin-shell": "2.3.4",
     "@tauri-apps/plugin-store": "2.4.2",
     "@xterm/addon-clipboard": "0.2.0",
     "@xterm/addon-fit": "0.11.0",
