--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ tauri-plugin-store = "2.4.2"
 tauri-plugin-log = { version = "2.8.0" }
 tauri-plugin-single-instance = { version = "2.3.7" }
 tauri-plugin-os = "2.3.2"
-tauri-plugin-shell = "2.3.4"
+tauri-plugin-opener = "2.5.3"
 tokio = { version = "1.49.0", features = ["time", "process"] }
 log = "0.4.29"
 sysinfo = "0.37.0"
