--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "dev": "WEBKIT_DISABLE_DMABUF_RENDERER=1 tauri dev",
     "build": "tauri build",
     "build-debug": "tauri build --debug",
-    "format": "prettier --write .",
-    "lint": "eslint .",
+    "format": "biome format --write .",
+    "lint": "biome lint .",
+    "check": "biome check .",
     "type-check": "tsc --pretty --noEmit",
     "prepare": "husky"
   },
@@ -40,37 +41,21 @@
     "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
-    "@eslint/js": "10.0.1",
+    "@biomejs/biome": "^2.3.15",
     "@tanstack/solid-query-devtools": "5.91.3",
     "@tauri-apps/cli": "2.10.0",
-    "@trivago/prettier-plugin-sort-imports": "6.0.2",
     "@types/color": "4.2.0",
     "@types/lodash": "4.17.23",
-    "@types/node": "24.10.13",
-    "@typescript-eslint/parser": "8.54.0",
-    "eslint": "10.0.0",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-solid": "0.14.5",
-    "globals": "17.3.0",
+    "@types/node": "24.10.11",
     "husky": "9.1.7",
     "lint-staged": "16.2.7",
-    "prettier": "3.8.1",
-    "prettier-plugin-tailwindcss": "0.7.2",
     "tailwindcss": "4.1.18",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.54.0",
     "vite": "7.3.1",
-    "vite-plugin-eslint": "1.8.1",
     "vite-plugin-solid": "2.11.10",
     "vite-tsconfig-paths": "6.1.0"
   },
   "lint-staged": {
-    "*.{ts,tsx,js}": [
-      "eslint --cache --fix",
-      "pnpm run lint",
-      "pnpm run format"
-    ],
-    "*.{js,css,md}": "prettier --write"
+    "*.{ts,tsx,js}": "biome check --write"
   }
 }
