--- a/package.json
+++ b/package.json
@@ -34,18 +34,19 @@
     "augmented-ui": "2.0.0",
     "clsx": "2.1.1",
     "color": "5.0.3",
-    "lodash": "4.17.23",
+    "lodash-es": "4.17.23",
     "pretty-bytes": "7.1.0",
     "smoothie": "1.36.1",
     "solid-js": "1.9.11",
     "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.15",
+    "@biomejs/biome": "2.3.15",
     "@tanstack/solid-query-devtools": "5.91.3",
     "@tauri-apps/cli": "2.10.0",
     "@types/color": "4.2.0",
     "@types/lodash": "4.17.23",
+    "@types/lodash-es": "4.17.12",
     "@types/node": "24.10.11",
     "husky": "9.1.7",
     "lint-staged": "16.2.7",
